--- a/assets/scss/pages/register.scss
+++ b/assets/scss/pages/register.scss
@@ -1,7 +1,19 @@
 .register {
-    background-color: var(--primary);
-    color: var(--light);
-    border-radius: 30px;
-    padding: 2rem;
+
+    .card {
+        width: max-content;
+    }
+
+    .uk-inline {
+        width: 100%;
+    }
+
+    .uk-input {
+        padding-right: 0;
+    }
+
+    .form-control {
+        border: none;
+    }
 
 }
