nav et bannière

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <img src="{{ asset('build/images/arrowverse-banner.jpg') }}" alt="" class="banner mb-3">
+    <img src="{{ asset('build/images/banner.jpg') }}" alt="" class="banner mb-3">
 
     <div class="container-fluid home">
 
