--- a/templates/actor/_form.html.twig
+++ b/templates/actor/_form.html.twig
@@ -1,7 +1,12 @@
 <div class="container">
-    {% form_theme form 'bootstrap_4_layout.html.twig' %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-primary"><i class="fas fa-save mr-2"></i> {{ button_label|default('Enregistrer') }}</button>
+    <div class="label-form">{{ form_label(form.name) }}</div>
+    {{ form_widget(form.name) }}
+    <div class="label-form">{{ form_label(form.programs) }}</div>
+    {{ form_widget(form.programs) }}
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-primary">
+            <i class="fas fa-save mr-2"></i> {{ button_label|default('Enregistrer') }}
+        </button>
+    </div>
     {{ form_end(form) }}
 </div>
