--- a/templates/category/_form.html.twig
+++ b/templates/category/_form.html.twig
@@ -3,9 +3,10 @@
 <div class="label-form">{{ form_label(form.color) }}</div>
 {{ form_widget(form.color) }}
 
-<div class="d-flex justify-content-center"></div>
-<button class="btn btn-primary">
-    <i class="fas fa-save mr-2"></i> {{ button_label|default('Enregistrer') }}
-</button>
+<div class="d-flex justify-content-center">
+    <button class="btn btn-primary">
+        <i class="fas fa-save mr-2"></i> {{ button_label|default('Enregistrer') }}
+    </button>
+</div>
 
 {{ form_end(form) }}
