--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajouter une catégori{% endblock %}
+{% block title %}Ajouter un genre{% endblock %}
 
 {% block body %}
 
     <div class="container mt-4">
         <a href="{{ path('category_index') }}" class="btn btn-primary">
-            <i class="fas fa-reply mr-2"></i> Retour à la liste des catégories
+            <i class="fas fa-reply mr-2"></i> Retour à la liste des genres
         </a>
 
-        <h1>Ajouter une nouvelle catégorie</h1>
+        <h1>Ajouter unn nouveau genre</h1>
         <hr>
 
         {{ include('category/_form.html.twig') }}
