--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -9,7 +9,7 @@
             <i class="fas fa-reply mr-2"></i> Retour à la liste des genres
         </a>
 
-        <h1>Ajouter unn nouveau genre</h1>
+        <h1>Ajouter un nouveau genre</h1>
         <hr>
 
         {{ include('category/_form.html.twig') }}
